# win7explorer

./: .gitignore  CMakeLists.txt  COMO_USAR.md  GUIA_PARA_GEMMA.md  LICENSE  PENDING_FEATURES.md  PLAN_CREATED.md  PROJECT_ROADMAP.md  README.md  WIN7_EXPLORER_ANALYSIS.md  dev.sh  install.sh  setup-github.sh  win7explorer.desktop
.claude/: settings.json
.continue/prompts/: new-prompt-1.md  new-prompt.md
html/: Explorador.html  app.jsx  components-chrome.jsx  components-extra.jsx  components-sidebar.jsx  components-views.jsx  data.jsx  icons.jsx  styles.css
html/qml/: Explorer.qml  FileSystem.qml  README.md  qmldir
qml/: Explorer.qml  FileSystem.qml  FolderTree.qml  SidebarGroup.qml  SidebarItem.qml  main.qml
qml/components/: AboutDialog.qml  AddressBar.qml  CommandBar.qml  ConnectDriveDialog.qml  ContentArea.qml  DetailsPanel.qml  FolderOptionsDialog.qml  FolderPickerDialog.qml  FolderTreeNode.qml  NavigationBar.qml  NavigationPanel.qml  PreviewPanel.qml  PropertiesDialog.qml  RenameDialog.qml  StatusBar.qml  ToastNotification.qml  WinMenuBar.qml
qml/menus/: ContextMenu.qml  MenuBarMenus.qml  OrganizeMenu.qml
qml/styles/: Palettes.js  Win7Theme.js  Win7Theme.qml  qmldir
qml/views/: ContentView.qml  DetailsView.qml  FileListView.qml  GroupedView.qml  IconsView.qml  TilesView.qml
src/: filesystembackend.cpp  filesystembackend.h  i18n.cpp  i18n.h  iconprovider.cpp  iconprovider.h  main.cpp  nativemenu.cpp  nativemenu.h
